webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapps
spec:
  selector:
    app: web-app
  ports:
    - name: http
      port: 80
      targetPort: 80
